--- a/index.html
+++ b/index.html
@@ -131,6 +131,6 @@
             </div>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./float_nav.js"></script>
 </body>
 </html>
